- fixed num results div position issue on Safari OS X

--- a/public/stylesheets/main_style.css
+++ b/public/stylesheets/main_style.css
@@ -192,8 +192,8 @@ aside {
 
 .badge {
     display: table-cell;
-    text-align: center;
     border-left: 1px solid #aaaaaa;
+    text-align: center;
 }
 
 #num-results {
@@ -208,9 +208,8 @@ aside {
 
 #input-form div {
     z-index: 1;
-    position: absolute;
-    bottom: 6px;
-    top: 6px;
+    position: relative;
+    top: 30px;
     right: 8px;
     padding-left: 4px;
     color: #aaaaaa;
@@ -304,6 +303,7 @@ aside {
 
 #language-button {
     position: relative;
+    top: 6px;
     float: left;
     margin-left: 0.3em;
     outline: none;
