--- a/public/stylesheets/typeahead_style.css
+++ b/public/stylesheets/typeahead_style.css
@@ -5,7 +5,7 @@
 /*root typeahead class*/
 .twitter-typeahead {
     display: inherit;
-    margin-top: 16px;    /* margin to the top of the frame */
+    margin-top: 24px;    /* margin to the top of the frame */
     margin-left: 0px;   /* margin to the left of the frame */
     font-family: "Helvetica Neue", Helvetica, Arial, sans-serif;
 }
